fixed some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 #root {
-  /* max-width: 1280px; */
   margin: 0 auto;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 .container {
   max-width: 1280px;
   width: 100%;
   margin: auto;
-  /* height: 100vh; */
 }
