--- a/src/components/Snackbar/Snackbar.css
+++ b/src/components/Snackbar/Snackbar.css
@@ -1,27 +1,50 @@
+.snackbar-container {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  z-index: var(--top-layer);
+  translate: 0px 200px;
+  animation: appearFromBottom ease-in-out 5000ms;
+}
+
+@keyframes appearFromBottom {
+  0% {
+    translate: 0px 200px;
+  }
+  5%,
+  95% {
+    translate: 0px 0px;
+  }
+  100% {
+    translate: 0px 200px;
+  }
+}
+
 .snackbar {
-    width: 100%;
-    max-width: calc( 100vw - 2rem );
-    max-width: calc( 100dvw - 2rem );
-    padding: 0.5rem;
-    border-radius: 2px;
-    border-top: 1px solid var(--player-border);
-    font-family: 'Satoshi-Medium';
-    position: absolute;
-    bottom: 1rem;
-    inset-inline: 1rem;
+  width: 100%;
+  max-width: 400px;
+  padding-block: 0.5rem 0.8rem;
+  padding-inline: 1rem;
+  border-radius: 4px;
+  border-top: 1px solid var(--player-border);
+  font-family: "Satoshi-Medium";
+  margin: auto;
+  line-height: 1.3;
 }
 
 .error {
-    background-color: var(--error-bg);
-    color: var(--white)
+  background-color: var(--error-bg);
+  color: var(--white);
 }
 
 .success {
-    background-color: var(--success-bg);
-    color: var(--white)
+  background-color: var(--success-bg);
+  color: var(--white);
 }
 
 .info {
-    background-color: var(--info-bg);
-    color: var(--black)
+  background-color: var(--info-bg);
+  color: var(--black);
 }
